# atomic-swap

./: .dockerignore  .env.template  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  deny.toml  docker-compose.yml  docker-setup.sh  setup.sh
.github/workflows/: ci.yml  security.yml
agent/btc/: Cargo.toml  README.md
agent/btc/src/: lib.rs
agent/eth/: .env.example  .gitignore  foundry.toml  hardhat.config.ts  package-lock.json  package.json  remappings.txt  slither.config.json
agent/eth/abi/: NFTSecretMint.json
agent/eth/contracts/: NFTSecretMint.sol
agent/eth/ignition/modules/: NFTSecretMint.ts
agent/eth/script/: Deploy.s.sol
agent/eth/src/: NFTSecretMint.sol
agent/eth/test/: NFTSecretMint.t.sol  NFTSecretMintInvariant.t.sol
agent/sol/: .gitignore  Anchor.toml  Cargo.toml  package-lock.json  package.json
agent/sol/harness/: Cargo.toml
agent/sol/harness/fixtures/: README.md
agent/sol/harness/src/: lib.rs
agent/sol/programs/sol-htlc/: Cargo.toml
agent/sol/programs/sol-htlc/src/: lib.rs
agent/sol/tests/: Cargo.toml  sol-htlc.ts
agent/sol/tests/src/: test_initialize.rs
btc-agent/: Cargo.toml
btc/src/: lib.rs
client/: Cargo.toml  README.md
client/abi/: NFTSecretMint.json
client/src/: btc.rs  cmd.rs  config.rs  eth.rs  execute.rs  main.rs  sol.rs  timelock.rs  types.rs  utils.rs
client/src/btc/: fee.rs  signer.rs  utils.rs
docs/: development.md
e2e/: Cargo.toml  README.md
e2e/src/: bitcoin.rs  build.rs  client.rs  ethereum.rs  lib.rs  process.rs  solana.rs  swap_env.rs
e2e/tests/: swap.rs
eth/: package-lock.json  package.json
scripts/: accounts.sh  bitcoin.sh  config.sh  demo-functions.sh  ethereum.sh  instructions.sh  logging.sh  prerequisites.sh  setup.sh  solana.sh  start-solana.sh  verify.sh
