[workspace]
members = ["agent/btc", "agent/sol/programs/*", "agent/sol/tests", "client"]

resolver = "3"

[workspace.dependencies]
bitcoin = { version = "0.32", features = ["serde", "rand"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
rand = "0.8"
thiserror = "2"

# https://github.com/briansmith/ring/discussions/2450
# ring = "0.17"


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
