[package]
name = "client"
description = "Client for cross-chain atomic swaps"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
default-run = "client"

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "derive_privkey"
path = "src/bin/derive_privkey.rs"

[dependencies]
btc-htlc = { workspace = true }
sol-htlc = { path = "../agent/sol/programs/sol-htlc", features = [
    "no-entrypoint",
] }

anyhow = { workspace = true }
bitcoin = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }

alloy = { workspace = true }
anchor-client = { workspace = true }
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
bitcoincore-rpc = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
