[package]
name = "e2e"
description = "End-to-end harness driving the swap client against ephemeral local chains"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
name = "e2e"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[dependencies]
anyhow = { workspace = true }
bitcoin = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
