[package]
name = "btc-htlc"
description = "Hash Time Locked Contract (HTLC) for Bitcoin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
bitcoin = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
