[package]
name = "sol-htlc"
version = "0.3.0"
description = "Hash Time Locked Contract (HTLC) for Solana"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kobby-pentangeli/atomic-swap"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_htlc"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["metadata"] }
mpl-token-metadata = "5.1.1"
sha2 = "0.10"

# Suppress cfg warnings from Anchor/Solana macro expansions (upstream issue)
[lints.rust]
unexpected_cfgs = "allow"
